add requirements file

--- a/check_cisco_compliance.yml
+++ b/check_cisco_compliance.yml
@@ -9,7 +9,7 @@
     - cisco.ios
 
   tasks:
-  - name: Check Service Settings
+  - name: Check Compliance Options
     cisco.ios.ios_config:
       lines:
         - service password-encryption
