--- a/check_cisco_compliance.yml
+++ b/check_cisco_compliance.yml
@@ -1,6 +1,24 @@
 ---
-- name: Set default cisco configuration items
+- name: Check for online hosts
   hosts: all
+  gather_facts: false
+  connection: network_cli
+  vars_files:
+    - cisco_vars.yml
+
+  tasks:
+    - name: Ping for reachability
+      command: ping -c1 {{ inventory_hostname }}
+      delegate_to: localhost
+      register: ping_result
+      ignore_errors: true
+
+    - name: Group hosts by online
+      group_by: key=reachable
+      when: ping_result.rc == 0
+
+- name: Set default cisco configuration items
+  hosts: reachable
   gather_facts: False
   connection: network_cli
   vars:
