--- a/check_cisco_compliance.yml
+++ b/check_cisco_compliance.yml
@@ -3,17 +3,21 @@
   hosts: all
   gather_facts: false
   connection: network_cli
+  vars:
+    ansible_network_os: ios
 
   tasks:
     - name: Ping for reachability
-      command: ping -c1 {{ inventory_hostname }}
+      command: ping -c3 {{ inventory_hostname }}
       delegate_to: localhost
       register: ping_result
       ignore_errors: true
+      check_mode: False
 
     - name: Group hosts by online
       group_by: key=reachable
       when: ping_result.rc == 0
+      check_mode: False
 
 - name: Set default cisco configuration items
   hosts: reachable
