added ios_facts for code version

--- a/check_cisco_compliance.yml
+++ b/check_cisco_compliance.yml
@@ -29,6 +29,13 @@
     - cisco.ios
 
   tasks:
+  - name: Gather device information
+    ios_facts:
+      gather_subset: min
+    register: ios_facts
+
+  - debug: var=ios_facts
+
   - name: Check Compliance Options
     cisco.ios.ios_config:
       lines:
