--- a/check_cisco_compliance.yml
+++ b/check_cisco_compliance.yml
@@ -62,7 +62,7 @@
         - errdisable recovery cause inline-power
         - errdisable recovery interval 600
         - no ip forward-protocol nd
-        - ip tacacs source-interface Vlan4000
+        #- ip tacacs source-interface Vlan4000
         - no ip http server
         - no ip http secure-server
         - ip ssh version 2
@@ -76,7 +76,7 @@
         - snmp-server enable traps config
         - snmp-server enable traps envmon fan shutdown supply temperature status
         - snmp mib flash cache
-        - ntp source Vlan 4000
+        #- ntp source Vlan 4000
         - ntp server 172.16.1.31
     register: config_results
 
