--- a/check_cisco_compliance.yml
+++ b/check_cisco_compliance.yml
@@ -36,7 +36,7 @@
       cisco.ios.ios_config:
         backup: yes
         src: templates/3560cx_compliance_template.j2
-      #when: ansible_facts.ansible_net_model == 'WS-C3560CX-12PC-S'
+        #Pwhen: ansible_facts.ansible_net_model == 'WS-C3560CX-12PC-S'
   # - name: Save configuration when changes are made
   #   cisco.ios.ios_command:
   #     lines: "write memory"
