--- a/check_cisco_compliance.yml
+++ b/check_cisco_compliance.yml
@@ -25,6 +25,8 @@
   connection: network_cli
   vars:
     ansible_network_os: ios
+  include_vars:
+    vars: vars/vars.yml
   collections:
     - cisco.ios
 
