--- a/check_cisco_compliance.yml
+++ b/check_cisco_compliance.yml
@@ -25,8 +25,6 @@
   connection: network_cli
   vars:
     ansible_network_os: ios
-  include_vars:
-    vars: vars/vars.yml
   collections:
     - cisco.ios
 
@@ -38,7 +36,9 @@
       cisco.ios.ios_config:
         backup: yes
         src: templates/3560cx_compliance_template.j2
-        #Pwhen: ansible_facts.ansible_net_model == 'WS-C3560CX-12PC-S'
+        # when: ansible_facts.ansible_net_model == 'WS-C3560CX-12PC-S'
+      include_vars:
+        - vars/vars.yml
   # - name: Save configuration when changes are made
   #   cisco.ios.ios_command:
   #     lines: "write memory"
