--- a/check_cisco_compliance.yml
+++ b/check_cisco_compliance.yml
@@ -38,6 +38,7 @@
       cisco.ios.ios_config:
         backup: yes
         src: templates/3560cx_compliance_template.j2
+        diff_against: running
         # when: ansible_facts.ansible_net_model == 'WS-C3560CX-12PC-S'
   # - name: Save configuration when changes are made
   #   cisco.ios.ios_command:
