--- a/check_cisco_compliance.yml
+++ b/check_cisco_compliance.yml
@@ -39,6 +39,7 @@
         backup: yes
         src: templates/3560cx_compliance_template.j2
         diff_against: running
+        intended: templates/3560cx_compliance_template.j2
         # when: ansible_facts.ansible_net_model == 'WS-C3560CX-12PC-S'
   # - name: Save configuration when changes are made
   #   cisco.ios.ios_command:
