--- a/check_cisco_compliance.yml
+++ b/check_cisco_compliance.yml
@@ -43,7 +43,7 @@
     - name: Apply Config
       cisco.ios.ios_config:
         backup: yes
-        src: tmp/{{ ansible_host }}.cfg
+        src: /tmp/{{ ansible_host }}.cfg
         diff_against: intended
         intended_config: /tmp/{{ ansible_host }}.cfg
       # save_when: modified
