--- a/check_cisco_compliance.yml
+++ b/check_cisco_compliance.yml
@@ -42,8 +42,8 @@
       # when: ansible_facts.ansible_net_model == 'WS-C3560CX-12PC-S'
     - name: Apply Config
       cisco.ios.ios_config:
-        backup: yes
-        src: /tmp/{{ ansible_host }}.cfg
+        #backup: yes
+        #src: /tmp/{{ ansible_host }}.cfg
         diff_against: intended
         intended_config: /tmp/{{ ansible_host }}.cfg
       # save_when: modified
