--- a/vars/vars.yml
+++ b/vars/vars.yml
@@ -10,6 +10,6 @@ local_pass: cisco
 domain_name: test.com
 syslog_server: 192.168.0.1
 protect_snmp_var:
-  - 10 permit 192.168.0.1
-  - 20 permit 192.168.0.2
-  - 150 deny any log
+  - permit 192.168.0.1
+  - permit 192.168.0.2
+  - deny any log
