--- a/check_cisco_compliance.yml
+++ b/check_cisco_compliance.yml
@@ -63,7 +63,7 @@
         src: templates/report_template.j2
         dest: /tmp/Cisco_Compliance_Report.txt
       delegate_to: localhost
-      run_once: True
+      # run_once: True
       check_mode: False
 
     - name: Email non-compliance
