--- a/vars/vars.yml
+++ b/vars/vars.yml
@@ -12,3 +12,19 @@ protect_snmp_var:
   - permit 192.168.0.1
   - permit 192.168.0.2
   - deny   any log
+tacacs_key: 12345678
+tacacs_servers:
+  server_1:
+    name: server1
+    ip_address: 192.168.0.1
+  server_2:
+    name: server2
+    ip_address: 192.168.1.1
+banner: |
+  UNAUTHORIZED ACCESS TO THIS DEVICE IS PROHIBITED
+  ================================================
+  You must have explicit authorized permission to access or
+  configure this device. Unauthorized attempts and actions to access or use this
+  system may result in civil and/or criminal penalties. All activities performed
+  on this device are monitored and logged.
+  ================================================
