--- a/check_cisco_compliance.yml
+++ b/check_cisco_compliance.yml
@@ -42,7 +42,7 @@
 
       # add config templates for 9300 switches
       # add config templates for 9500 switches
-    - name: Apply Configuration template
+    - name: Apply Base Configuration template
       cisco.ios.ios_config:
         backup: yes
         src: /tmp/{{ ansible_host }}.cfg
@@ -50,6 +50,14 @@
         intended_config: /tmp/{{ ansible_host }}.cfg
       # save_when: modified
       register: config_results
+      notify: save ios
+
+    - name: Apply domain configuration
+      cisco.ios.ios_system:
+        domain_name: "{{ domain_name }}"
+        lookup_enabled: False
+      register: domain_results
+      notify: save ios
 
     - name: Generate Report file
       blockinfile:
@@ -94,3 +102,9 @@
         state: absent
       delegate_to: localhost
       check_mode: False
+
+  handlers:
+    - name: save ios
+      cisco.ios.ios_command:
+        commands: "write memory"
+      when: not ansible_check_mode
