set no log for password stuff

--- a/cisco_compliance/tasks/main.yml
+++ b/cisco_compliance/tasks/main.yml
@@ -47,6 +47,7 @@
     state: present
     purge: True
   register: user_results
+  no_log: True
   notify: save ios
 
 # - name: Apply TACACS Server Configuration
